--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^1.6.5",
     "file-saver": "^2.0.5",
     "html-react-parser": "^5.1.0",
     "next": "14.0.4",
